--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "description": "Node class",
   "main": "main.js",
+  "type": "module",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon main.js"
   },
   "author": "FunsoJoba",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
     "mongoose": "^7.5.2"
   }
